# ACM

./: .gitignore  CMakeLists.txt  create-folders.js  generate-cmake.sh  template.cpp
algorithms/graphs/: Prim.cpp
week-01/a-black-and-white-stripe/: main.cpp
week-01/black-and-white-stripe/: main.cpp
week-01/c-frog-traveler/: main.cpp
week-01/everyone-is-a-winner/: main.cpp
week-01/frog-traveler/: main.cpp
week-01/i-maximum-value/: main.cpp
week-01/interesting-drink/: main.cpp
week-01/little-pony-and-expected-maximum/: main.cpp
week-01/maximum-subsequence/: main.cpp
week-01/maximum-value/: main.cpp
week-01/same-differences/: main.cpp
week-01/string-equality/: main.cpp
week-01/the-artful-expedient/: main.cpp
week-02/c-prefixes-and-suffixes/: main.cpp
week-02/dora-and-search/: main.cpp
week-02/e-dora-and-search/: main.cpp
week-02/f-moscow-gorillas/: main.cpp
week-02/fedya-and-array/: main.cpp
week-02/h-moving-dots/: input-00  main.cpp
week-02/meeting-on-the-line/: main.cpp
week-02/minimum-notation/: main.cpp
week-02/moscow-gorillas/: main.cpp
week-03/b-paint-the-numbers/: input-00  input-01  input-02
week-03/c-the-number-of-products/: input-00  main.cpp
week-03/d-divisible-numbers-hard-version/: main.cpp
week-03/e-beautiful-graph/: input-01  input-02  main.cpp
week-03/g-enlarge-gcd/: input-00  input-01
week-04/a-walking-boy/: main.cpp
week-04/b-vittorio-plays-with-lego-bricks/: input-00  input-01  input-02  input-03
week-04/c-library-game/: input-00  input-01
week-04/d-teamwork/: input-00  input-02
week-04/e-crossing-the-railways/: input-00  input-01  input-02  input-03
week-04/g-another-wine-tasting-event/: input-00
week-04/h-beppa-and-swerchat/: main.cpp
week-04/i-spinach-pizza/: input-00  input-01  input-02
week-04/j-italian-data-centers/: input-00  input-01  input-02  input-03
week-04/k-uniform-chemistry/: input-00  input-01  input-02  input-03
week-04/l-controllers/: input-00  input-01  input-02  main.cpp
week-04/m-parmigiana-with-seafood/: input-01
week-04/n-count-permutations/: input-00  input-01  input-02  input-03
week-05/b-business-stamps/: input-00  main.cpp
week-05/d-denji/: input-00  input-01
week-05/e-exam-period/: input-00  input-01  input-02
week-05/f-fence-painting/: input-00  input-01
week-05/g-gustavos-modern-art/: input-00  main.cpp
week-05/h-homework/: input-00  input-01
week-05/i-ivan-and-mega-queries/: input-00
week-05/j-joyful-city/: input-00  input-01  input-02
week-05/k-keypad-repetitions/: input-00
week-05/l-ladybug-and-the-bullet-train/: input-00  input-01
week-06/c-even-number-addicts/: main.cpp
week-06/f-binary-string-sorting/: main.cpp
week-06/h-shocking-arrangement/: input-00
week-08/a-catch-overflow/: input-00  input-01  main.cpp
week-08/b-permutation-transformation/: main.cpp
week-08/c-put-knight/: main.cpp
week-08/d-raising-bacteria/: main.cpp
week-08/e-random-mood/: input-00  input-02  main.cpp
week-08/f-k-th-beautiful-string/: main.cpp
week-08/g-weird-sum/: input-01  input-02  main.cpp
week-08/h-searching-local-minimum/: input-00  input-01  main.cpp
week-08/i-party/: input-00  main.cpp
week-09/6-zizaly/: template  template.cpp
week-10/a-mahmoud-and-ehab-and-the-bipartiteness/: main.cpp
week-10/b-playing-with-gcd/: main.cpp
week-10/c-sloth-naptime/: input-00  input-01  input-02  main.cpp
week-10/d-palindromes-coloring/: main.cpp
week-10/e-design-tutorial-inverse-the-problem/: input-00  input-01  input-02  input-03  input-04  main.cpp
week-10/f-firecrackers/: input-00  input-01  main.cpp
week-10/g-the-meeting-place-cannot-be-changed/: input-00  input-01  main.cpp
week-10/h-almost-identity-permutations/: main.cpp
week-11/a-parsas-humongous-tree/: main.cpp
week-11/c-yet-another-counting-problem/: main.cpp
week-11/d-yet-another-yet-another-task/: input-02  input-03  input-04  main.cpp
week-11/e-dominated-subarray/: main.cpp
week-11/f-sequence-pair-weight/: input-00  main.cpp
week-11/g-minimum-and-maximum/: input-00  main.cpp
week-12/a-luotianyi-and-the-floating-islands-easy-version/: input-00
week-12/b-luotianyi-and-xor-tree/: input-00  input-01  input-02  input-03
week-12/d-luotianyi-and-the-palindrome-string/: input-00  main.cpp
week-12/g-indivisible/: input-00  main.cpp
week-13/b-permutation-swap/: main.cpp
week-13/d-a-wide-wide-graph/: main.cpp
week-13/f-vertical-paths/: main.cpp
week-13/h-factorial-divisibility/: input-01  input-02  input-03  input-05  main.cpp
